# kserve

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .snyk  AGENTS.md  Dockerfile  Dockerfile.ubi8  Makefile  Makefile.kserve-module.mk  Makefile.ocp.mk  Makefile.overrides.mk  OWNERS  README.md  agent.Dockerfile  agent.Dockerfile.ubi8  artifacts.lock.yaml  generic_lockfile.yaml  go.mod  go.sum  kserve-images.sh  kserve-module-controller.Dockerfile  llmisvc-controller.Dockerfile  localmodel-agent.Dockerfile  localmodel.Dockerfile  renovate.json  router.Dockerfile  router.Dockerfile.ubi8  rpm.lock.yaml  rpms.in.yaml  rpms.lock.yaml  ubi.repo
.github/: PULL_REQUEST_TEMPLATE.md
.rules/: build-tags.md  distro-builds.md  e2e-openshift-compat.md  kustomize-hygiene.md  makefile-split.md  rbac-isolation.md
.serena/: project.yml
.tekton/: README.md  kserve-211-pull-request.yaml  kserve-211-push.yaml  kserve-212-pull-request.yaml  kserve-212-push.yaml  kserve-213-pull-request.yaml  kserve-213-push.yaml  kserve-214-pull-request.yaml  kserve-214-push.yaml  kserve-215-pull-request.yaml  kserve-215-push.yaml  kserve-216-pull-request.yaml  kserve-216-push.yaml  kserve-217-pull-request.yaml  kserve-217-push.yaml  kserve-ageent-29-pull-request.yaml  kserve-ageent-29-push.yaml  kserve-agent-210-pull-request.yaml  kserve-agent-210-push.yaml  kserve-agent-211-pull-request.yaml  kserve-agent-211-push.yaml  kserve-agent-212-poc-pull-request.yaml  kserve-agent-212-poc-push.yaml  kserve-agent-212-pull-request.yaml  kserve-agent-212-push.yaml  (+295 more)
python/artexplainer/: pyproject.toml
(+391 files in other folders)
