[tool.poetry]
name = "artserver"
version = "0.15.2"
description = "Model Server implementation for AI Robustness Toolbox. Not intended for use outside KServe Frameworks Images."
authors = ["Andrew Butler <Andrew.Butler@ibm.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "artserver" },
]

[tool.poetry.dependencies]
# Updated to >=3.11 for CVE-2026-0897 fix (requires Keras 3.13.2+)
python = ">=3.11,<3.13"
kserve = {path = "../kserve", develop = true}
adversarial-robustness-toolbox = {version = "^1.18.1", extras = ["keras"]}
nest-asyncio = "^1.5.8"
pillow = "^10.3.0"
# pin to avoid https://github.com/kserve/kserve/actions/runs/8990775750/job/24696874468?pr=3598
h5py = "3.10.0"
# CVE-2026-0897: Keras DoS via crafted HDF5 weight loading file (RHOAIENG-45807)
# Fixed in 3.13.2+ with validation for HDF5 dataset metadata
keras = ">=3.13.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^5.0.0"
mypy = "^0.991"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
